--- a/less/about-page.less
+++ b/less/about-page.less
@@ -7,7 +7,7 @@
 .about-statement {
   text-align: center;
   padding: 20px;
-  background-color: grey;
+  background-color: #E0E0E0;
 }
 
 .about-statement h3 {
