--- a/less/global.less
+++ b/less/global.less
@@ -1,3 +1,5 @@
 body{
-    font-size: 100%;
+  width: 99%;
+  margin: 0 auto;
+  font-size: 100%;
 }
