--- a/less/home-page.less
+++ b/less/home-page.less
@@ -193,3 +193,9 @@
     margin:0 auto;
 
 }
+
+.f-line{
+   width:99.90%;
+   border: 0.7px solid rgb(207, 205, 205);
+   margin: 60px 0 60px 0;
+}
